src/test/deca/context/valid/declClass-classTypeInParametersOfMethods.deca
class A {
    float ar;
    int myMethod(int fr, float b){
        b = 3;
    }
}

class C {
    int dragonBallZ;
}

class B extends A {
    int ar;
    boolean newNewMethod (C b, int fr){
        fr = 10000;
    }
}