src/test/deca/context/invalid/declClass-wrongMethodReturnTypeIntBoolean.deca
class A {
    int myMethod(float b){
        b = 3;
    }
}
class B extends A {
    boolean myMethod(float b){
        b = 10000;
    }
}